p2/scripts/app1.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: service-app1
  labels:
  app: web-app-1
spec:
  selector:
    app: web-app-1
  ports:
    - protocol: TCP
      port: 80        # Exposed service port
      targetPort: 80  # Listened service port

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rihoy-app1
  labels:
    app: web-app-1
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: web-app-1
    template:
      metadata:
        labels:
          app: web-app-1
      spec:
        containers:
          - name: nginx-containers
            image: nginx:alpine
            ports:
              - containerPort: 80
            lifecycle:
              postStart:
                exec:
                  command: ["/bin/sh", "-c", "echo '<h1>Bienvenue sur Rihoy APP1</h1>' > /usr/share/nginx/html/index.html"]
